--- a/src/tests/ftest/soak/soak_smoke.yaml
+++ b/src/tests/ftest/soak/soak_smoke.yaml
@@ -26,14 +26,13 @@ server_config:
     control_log_file: daos_control0.log
     servers:
         0:
-            targets: 4
             pinned_numa_node: 0
             nr_xs_helpers: 1
             fabric_iface: ib0
             fabric_iface_port: 31317
             log_file: daos_server0.log
             bdev_class: nvme
-            bdev_list: ["aaaa:aa:aa.a","bbbb:bb:bb.b"]
+            bdev_list: ["aaaa:aa:aa.a"]
             scm_class: dcpm
             scm_list: ["/dev/pmem0"]
             scm_mount: /mnt/daos0
@@ -41,14 +40,13 @@ server_config:
             env_vars:
                 - FI_UNIVERSE_SIZE=2048
         1:
-            targets: 4
             pinned_numa_node: 1
             nr_xs_helpers: 1
             fabric_iface: ib1
             fabric_iface_port: 31417
             log_file: daos_server1.log
             bdev_class: nvme
-            bdev_list: ["cccc:cc:cc.c","dddd:dd:dd.d"]
+            bdev_list: ["bbbb:bb:bb.b"]
             scm_class: dcpm
             scm_list: ["/dev/pmem1"]
             scm_mount: /mnt/daos1
