DAOS-8099 test: Basic test (enable csum scrubber) Test-tag-hw-medium: pr,hw,medium,ib2 daily_regression Test-tag-hw-large: pr,hw,large daily_regression
Summary:
- Enable csum scrubber under OSA tests.

Signed-off-by: rpadma2 <ravindran.padmanabhan@intel.com>

--- a/src/tests/ftest/osa/osa_offline_drain.yaml
+++ b/src/tests/ftest/osa/osa_offline_drain.yaml
@@ -49,6 +49,7 @@ pool:
     nvme_size: 108000000000
     svcn: 4
     control_method: dmg
+    properties: scrub:continuous
 container:
     type: POSIX
     control_method: daos
