--- a/src/tests/ftest/osa/osa_offline_extend.yaml
+++ b/src/tests/ftest/osa/osa_offline_extend.yaml
@@ -50,6 +50,7 @@ pool:
   nvme_size: 54000000000
   svcn: 4
   control_method: dmg
+  properties: scrub:run_wait
 container:
   type: POSIX
   control_method: daos
