--- a/src/tests/ftest/osa/osa_offline_reintegration.yaml
+++ b/src/tests/ftest/osa/osa_offline_reintegration.yaml
@@ -57,6 +57,7 @@ pool:
   control_method: dmg
   rebuild_timeout: 120
   pool_query_timeout: 30
+  properties: scrub:continuous,scrub-freq:1,scrub-cred:10
 container:
   type: POSIX
   control_method: daos
