--- a/src/tests/ftest/aggregation/aggregation_checksum.yaml
+++ b/src/tests/ftest/aggregation/aggregation_checksum.yaml
@@ -1,14 +1,12 @@
 hosts:
   test_servers:
     - server-A
-  test_clients:
-    - client-B
 timeout: 240
 server_config:
   name: daos_server
   servers:
     bdev_class: nvme
-    bdev_list: ["0000:81:00.0"]
+    bdev_list: ["aaaa:aa:aa.a"]
 pool:
   mode: 146
   name: daos_server
