--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,7 +23,7 @@ theme:
     feature:
         tabs: true
 
-docs_dir: ./
+docs_dir: doc
 
 markdown_extensions:
     - admonition
@@ -74,7 +74,7 @@ nav:
         - 'Run dbench': 'QSG/dbench.md'
         - 'Datamover test': 'QSG/datamover.md'
     - Releases:
-        - 'Release Notes v1.0': 'release/release_notes_v1_0.md'
+        - 'Release Notes v1.2': 'release/release_notes_v1_2.md'
         - 'Support Matrix': 'release/support_matrix.md'
     - Developer Zone:
         - 'Dev Environment': 'dev/development.md'
