--- a/src/tests/ftest/ior/ior_small.yaml
+++ b/src/tests/ftest/ior/ior_small.yaml
@@ -9,7 +9,7 @@ hosts:
     - client-F
     - client-G
     - client-H
-timeout: 700
+timeout: 300
 server_config:
     name: daos_server
     servers:
@@ -36,7 +36,7 @@ container:
     properties: cksum:crc16,cksum_size:16384,srv_cksum:on
     control_method: daos
 ior:
-    ior_timeout: 60
+    ior_timeout: 30
     client_processes:
         np_16:
             np: 16
@@ -58,7 +58,8 @@ ior:
             - [1M, 32M]
           obj_class:
             - "SX"
-            - "RP_2GX"
+# Commenting it out until DAOS-3097/3143 is resolved.
+#            - "RP_2GX"
 dfuse:
     mount_dir: "/tmp/daos_dfuse/"
     disable_caching: True
