--- a/utils/build.config
+++ b/utils/build.config
@@ -9,7 +9,7 @@ ISAL_CRYPTO = v2.23.0
 SPDK = v21.07
 OFI = v1.12.0
 OPENPA = v1.0.4
-MERCURY = v2.0.1
+MERCURY = v2.1.0rc1
 PSM2 = PSM2_11.2.78
 PROTOBUFC = v1.3.3
 
